* #2 - fix issue with indentation in XML output

2004-11-23  Jon Schewe  <jpschewe@mtu.net>

	* src/net/mtu/eggplant/util/gui/GraphicsUtils.java
	(GraphicsUtils): Added support for dual head systems by using
	window.getGraphicsConfiguration().getBounds() instead of
	window.getToolkit().getScreenSize().

2004-11-12  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Fixed build of api documentation for Releases.

	* Release 0.5
	
	* Updated with new build template.  Removed old code and updated
	libraries.  Depend on commons-collections now to do collections
	stuff instead of my own implementations. 

2004-04-04  Jon Schewe  <jpschewe@mtu.net>

	* src/net/mtu/eggplant/util/DefaultBean.java (DefaultBean):
	Removed deprecations.

2004-01-28  Jon Schewe  <jpschewe@mtu.net>
	
	* Release 0.4

	* src/net/mtu/eggplant/util/gui/GraphicsUtils.java (centerWindow):
	Updated to use geom package for more accurate measurements and
	fixed the calculation to use width AND height, rather than just width.

2004-01-22  Jon Schewe  <jpschewe@mtu.net>
	
	* Release 0.3

	* src/net/mtu/eggplant/util/Debug.java: Deprecated Debug in favor
	of Log4j

	* src/net/mtu/eggplant/util/DefaultBean.java (DefaultBean): Fixed
	some method names.
	(DefaultBean): Added getPropertyChangeListeners methods.

2003-07-02  Jon Schewe  <jpschewe@mtu.net>

	* src/net/mtu/eggplant/util/network/TCPServer.java: Fixed javadoc

2002-09-30  Jon Schewe  <jpschewe@mtu.net>

	* src/net/mtu/eggplant/util/BasicFileFilter.java: Modified accept
	to allow directories to be selected.  This allows one to traverse
	through directories. 

2002-08-25  Jon Schewe  <jpschewe@mtu.net>
	
	* Release 0.2
	
2002-08-25  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Upgraded to junit-3.8

2002-05-27  Jon Schewe  <jpschewe@mtu.net>

	* build.xml: Upgraded to junit-3.7

2001-01-07  Jon Schewe  <jpschewe@mtu.net>

	* prj.el: Upgraded to junit-3.4

2000-12-29  Jon Schewe  <jpschewe@eggplant.mtu.net>
