@@ -1,3 +1,4 @@
+* #3 - build with gradle
 * #2 - fix issue with indentation in XML output
 
 2004-11-23  Jon Schewe  <jpschewe@mtu.net>
